# bard-pytorch-dynamics

./: .gitignore  LINCENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  lint.yml
bard/: __init__.py  api.py
bard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bard/core/: __init__.py  acceleration.py  chain.py  data.py  dynamics.py  jacobian.py  kinematics.py  model.py  robot_dynamics.py  state.py  triton_kernels.py  utils.py
bard/parsers/: urdf.py
bard/parsers/urdf_parser_py/: sdf.py  urdf.py
bard/parsers/urdf_parser_py/xml_reflection/: basics.py  core.py
bard/structures/: __init__.py  frame.py  joint.py  link.py  visual.py
bard/transforms/: __init__.py  math.py  perturbation.py  rotation_conversions.py  so3.py  transform3d.py
bard/utils/: validation.py  visualization.py
benchmark/: benchconf.py  benchmark_acceleration.py  benchmark_crba.py  benchmark_jacobian.py  benchmark_kinematics.py  benchmark_rnea.py  run_benchmarks.py
benchmark/bench_logs/: bench_go2.txt
benchmarks/: .gitignore  accuracy_vs_pinocchio.py  plot_results.py  slurm_benchmark.sh  speed_benchmark.py
docs/source/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: 01_forward_kinematics.py  02_batched_jacobian.py  03_inverse_dynamics_floating_base.py  simple_arm.urdf
tests/: bard_basic_test.py  basic_test.py  conftest.py  test_acceleration.py  test_autograd.py  test_dynamics.py  test_fixed_base_acceleration.py  test_fixed_base_dynamics.py  test_fixed_base_fk.py  test_fixed_base_jacobian.py  test_floating_base_acceleration.py  test_floating_base_dynamics.py  test_floating_base_fk.py  test_floating_base_jacobian.py  test_forward_kinematics.py  test_jacobian.py  test_robot_dynamics.py
tests/spined_dog_asset/: spined_dog.urdf  spined_dog_no_foot.urdf
tests/spined_dog_asset/meshes/: ._simplify_sim_hind_spine.stl  simplify_sim_front_body.stl  simplify_sim_front_left_leg_upper.stl  simplify_sim_front_right_leg_lower.stl  simplify_sim_front_right_leg_upper.stl  simplify_sim_front_spine.stl  simplify_sim_hind_body.stl  simplify_sim_hind_left_leg_upper.stl  simplify_sim_hind_right_leg_lower.stl  simplify_sim_hind_right_leg_upper.stl  simplify_sim_hind_spine.stl
