[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bard"
version = "0.1"
description = "Batched Articulated Robot Dynamics - Efficient robot kinematics and dynamics in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yue Wang", email = "yue.wang@soton.ac.uk"}
]
maintainers = [
    {name = "Yue Wang", email = "yue.wang@soton.ac.uk"}
]
keywords = [
    "robotics",
    "kinematics", 
    "dynamics",
    "pytorch",
    "batch-processing",
    "differentiable",
    "rigid-body-dynamics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "torch>=2.7.1",
    "numpy>=2.3.2",
    "pyyaml>=6.0",
    "lxml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pinocchio>=3.7",
    "matplotlib>=3.5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.23",
]
examples = [
]
all = ["bard[dev,docs,examples]"]

[project.urls]
Homepage = "https://github.com/yourusername/bard"
Documentation = "https://bard.readthedocs.io"
Repository = "https://github.com/yourusername/bard"
Issues = "https://github.com/yourusername/bard/issues"
Changelog = "https://github.com/yourusername/bard/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["bard"]

[tool.setuptools.package-data]
bard = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ""