[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bard"
version = "0.2"
description = "Batched Articulated Robot Dynamics - Efficient robot kinematics and dynamics in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yue Wang", email = "yue.wang@soton.ac.uk"}
]
maintainers = [
    {name = "Yue Wang", email = "yue.wang@soton.ac.uk"}
]
keywords = [
    "robotics",
    "kinematics", 
    "dynamics",
    "pytorch",
    "batch-processing",
    "differentiable",
    "rigid-body-dynamics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "numpy>=2.3.2",
    "pyyaml>=6.0",
    "lxml>=6.0",
]

[project.optional-dependencies]

cpu = [
  "torch>=2.1",
  "torchvision>=0.16",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "matplotlib>=3.5.0",
    "black>=24.1"
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.23",
]

[project.urls]
Homepage = "https://github.com/YueWang996/bard"
Repository = "https://github.com/YueWang996/bard"
Issues = "https://github.com/YueWang996/bard/issues"

[tool.setuptools]
packages = ["bard"]

[tool.setuptools.package-data]
bard = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ""
